unpackaged/main/default/objects/Account_Request__c/fields/Account_Owner_Sales_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Sales_Id__c</fullName>
    <label>Account Owner Sales Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>