unpackaged/main/default/objects/Account_Request__c/fields/AM_to_TS_Transfer__c.field-meta.xml
<CustomField>
    <fullName>AM_to_TS_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM to TS Transfer</label>
    <type>Checkbox</type>
</CustomField>