unpackaged/main/default/objects/Account_Request__c/fields/Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failed_Reason__c</fullName>
    <label>Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>