unpackaged/main/default/objects/Account_Request__c/fields/Is_transferable__c.field-meta.xml
<CustomField>
    <fullName>Is_transferable__c</fullName>
    <formula>CASE(TEXT(Transfer_approval_status__c),

&#39;Approved&#39;, &#39;Ready for transfer to &#39; &amp; Transfer_to__r.FirstName &amp; &#39; &#39; &amp; Transfer_to__r.LastName,
&#39;In progress&#39;, &#39;Transfer request is awaiting approval&#39;,
&#39;Not transferable&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is transferable</label>
    <type>Text</type>
</CustomField>