unpackaged/main/default/objects/Account_Request__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <label>New Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>