unpackaged/main/default/objects/Account_Request__c/fields/New_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>