unpackaged/main/default/objects/Account_Request__c/fields/PowerPass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PowerPass_Account_Number__c</fullName>
    <label>PowerPass Account Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>