unpackaged/main/default/objects/Account_Request__c/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>