unpackaged/main/default/objects/Account_Request__c/fields/Previous_Owner_Sales_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Sales_Id__c</fullName>
    <label>Previous Owner Sales Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>