unpackaged/main/default/objects/Account_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation Check</fullName>
                <default>true</default>
                <label>Validation Check</label>
            </value>
            <value>
                <fullName>Pending Transfer</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Validation Failed</fullName>
            </value>
            <value>
                <fullName>Manager Rejected</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>