unpackaged/main/default/objects/Account_Request__c/fields/Transfer_to__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 OR 4)</booleanFilter>
        <errorMessage>Manager is not set or in active</errorMessage>
        <filterItems>
            <field>User.ManagerId</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>User.Manager.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Provisioning User</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>