unpackaged/main/default/objects/Account_Request__c/fields/TransferInitiator__c.field-meta.xml
<CustomField>
    <fullName>TransferInitiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>