unpackaged/main/default/objects/Account_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Account Transfer</fullName>
                <default>true</default>
                <label>Bulk Account Transfer</label>
            </value>
            <value>
                <fullName>Single Account Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>