unpackaged/main/default/objects/Account_Request__c/recordTypes/Account_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Account_Transfer</fullName>
    <active>true</active>
    <label>Account Transfer</label>
</RecordType>