unpackaged/main/default/objects/Account_Request__c/listViews/Bulk_Account_Transfer_Yesterday.listView-meta.xml
<ListView>
    <fullName>Bulk_Account_Transfer_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PowerPass_Account_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bulk Account Transfer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Transfer</value>
    </filters>
    <label>Bulk Account Transfer Yesterday</label>
</ListView>