unpackaged/main/default/objects/Account_Request__c/listViews/Single_Account_Transfer.listView-meta.xml
<ListView>
    <fullName>Single_Account_Transfer</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PowerPass_Account_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Single Account Transfer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Transfer</value>
    </filters>
    <label>Single Account Transfer</label>
</ListView>